--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
             external>GitHub</Link
           > repository. To learn more about why this template exists, read this blog
           post: <Link
-            href="/blog/the-state-of-static-blogs"
+            href="/astro-blog/blog/the-state-of-static-blogs"
             class="text-foreground"
             underline>The State of Static Blogs in 2024</Link
           >.
@@ -74,7 +74,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
     </ul>
     <div class="flex justify-center">
       <Link
-        href="/blog"
+        href="/astro-blog/blog"
         class={buttonVariants({ variant: 'ghost' }) + ' group'}
       >
         See all posts <span
