--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,17 +14,17 @@ import logo from '../../public/static/logo.svg'
   <div
     class="mx-auto flex max-w-3xl flex-wrap items-center justify-between gap-4 p-4"
   >
-    <Link href="/" class="flex shrink-0 items-center gap-2 text-xl font-medium">
+    <Link href="/astro-blog" class="flex shrink-0 items-center gap-2 text-xl font-medium">
       <Image src={logo} alt="Logo" class="size-8" />
       {SITE.title}
     </Link>
-    <div class="flex items-center gap-2 md:gap-4">
+    <!-- <div class="flex items-center gap-2 md:gap-4">
       <nav class="hidden items-center gap-4 text-sm sm:gap-6 md:flex">
         {
           NAV_LINKS.map((item) => (
             <Link
               href={item.href}
-              class="text-foreground/60 hover:text-foreground/80 capitalize transition-colors"
+              class="text-foreground/60 hover:text-foreground/80 transition-colors"
             >
               {item.label}
             </Link>
@@ -33,6 +33,6 @@ import logo from '../../public/static/logo.svg'
       </nav>
       <MobileMenu client:load transition:persist />
       <ThemeToggle transition:persist />
-    </div>
+    </div> -->
   </div>
 </header>
