--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,48 +15,24 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
   <section>
     <div class="rounded-lg border">
       <div class="flex flex-col space-y-1.5 p-6">
-        <h3 class="text-3xl leading-none font-medium">er·u·dite</h3>
+        <h3 class="text-3xl leading-none font-medium">e·tyen</h3>
         <p class="text-muted-foreground text-sm">
-          /ˈer(y)əˌdīt/ &bull; <span class="font-medium">adjective</span>
+          / e.tjɛn / &bull; <span class="font-medium">nom propre</span>
         </p>
       </div>
       <div class="p-6 pt-0">
         <p class="text-muted-foreground mb-2 text-sm">
-          astro-erudite is an opinionated, unstyled static blogging template
-          built with <Link
-            href="https://astro.build"
-            class="text-foreground"
-            external
-            underline>Astro</Link
-          >, <Link
-            href="https://tailwindcss.com"
-            class="text-foreground"
-            external
-            underline>Tailwind</Link
-          >, and <Link
-            href="https://ui.shadcn.com"
-            class="text-foreground"
-            external
-            underline>shadcn/ui</Link
-          >. Extraordinarily loosely based on the <Link
-            href="https://astro-micro.vercel.app/"
-            class="text-foreground"
-            external
-            underline>Astro Micro</Link
-          > theme.
-        </p>
-        <p class="text-muted-foreground text-sm">
-          To use this template, check out the <Link
+          bachelier en marketing, expert en stratégie web et solutions digitales (aucun rapport). ce blog est fait avec le thème 
+          <Link
             href="https://github.com/jktrn/astro-erudite"
             class="text-foreground"
-            underline
-            external>GitHub</Link
-          > repository. To learn more about why this template exists, read this blog
-          post: <Link
-            href="/astro-blog/blog/the-state-of-static-blogs"
-            class="text-foreground"
-            underline>The State of Static Blogs in 2024</Link
-          >.
+            external
+            underline>astro-erudite</Link
+          >
+          et Github Pages. 
+        </p>
+        <p class="text-muted-foreground text-sm">
+          respire, on sauve pas des vies.
         </p>
       </div>
     </div>
@@ -77,7 +53,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
         href="/astro-blog/blog"
         class={buttonVariants({ variant: 'ghost' }) + ' group'}
       >
-        See all posts <span
+        tout le yap <span
           class="ml-1.5 transition-transform group-hover:translate-x-1"
           >&rarr;</span
         >
