--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -3,4 +3,4 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="astro-erudite" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="manifest" href="/astro-blog/site.webmanifest" />
