--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
 ---
 
 <Layout>
-  <PageHead slot="head" title="Home" />
+  <PageHead slot="head" title="maison" />
   <section>
     <div class="rounded-lg border">
       <div class="flex flex-col space-y-1.5 p-6">
@@ -38,7 +38,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
     </div>
   </section>
   <section class="flex flex-col gap-y-4">
-    <h2 class="text-2xl font-medium">Latest posts</h2>
+    <h2 class="text-2xl font-medium">le bla bla</h2>
     <ul class="flex flex-col gap-y-4">
       {
         blog.map((post) => (
