fix: langue + ajouts: mes infos

--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -9,7 +9,7 @@ const { prevPost, nextPost } = Astro.props
 
 <nav class="col-start-2 grid grid-cols-1 gap-4 sm:grid-cols-2">
   <Link
-    href={nextPost ? `/blog/${nextPost.id}` : '#'}
+    href={nextPost ? `/astro-blog/blog/${nextPost.id}` : '#'}
     class={cn(
       buttonVariants({ variant: 'outline' }),
       'rounded-xl group flex items-center justify-start size-full',
@@ -22,14 +22,14 @@ const { prevPost, nextPost } = Astro.props
       class="mr-2 size-4 transition-transform group-hover:-translate-x-1"
     />
     <div class="flex flex-col items-start overflow-hidden text-wrap">
-      <span class="text-muted-foreground text-left text-xs">Next Post</span>
+      <span class="text-muted-foreground text-left text-xs">article précédent</span>
       <span class="w-full text-left text-sm text-ellipsis">
-        {nextPost?.data.title || 'Latest post!'}
+        {nextPost?.data.title || 't\'es au plus récent!'}
       </span>
     </div>
   </Link>
   <Link
-    href={prevPost ? `/blog/${prevPost.id}` : '#'}
+    href={prevPost ? `/astro-blog/blog/${prevPost.id}` : '#'}
     class={cn(
       buttonVariants({ variant: 'outline' }),
       'rounded-xl group flex items-center justify-end size-full',
@@ -38,10 +38,10 @@ const { prevPost, nextPost } = Astro.props
     aria-disabled={!prevPost}
   >
     <div class="flex flex-col items-end overflow-hidden text-wrap">
-      <span class="text-muted-foreground text-right text-xs">Previous Post</span
+      <span class="text-muted-foreground text-right text-xs">article suivant</span
       >
       <span class="w-full text-right text-sm text-ellipsis">
-        {prevPost?.data.title || 'Last post!'}
+        {prevPost?.data.title || 't\'es au dernier!'}
       </span>
     </div>
     <Icon
