--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -28,7 +28,7 @@ function getHeadingMargin(depth: number): string {
   <summary
     class="flex cursor-pointer items-center justify-between text-xl font-medium group-open:pb-4 xl:hidden"
   >
-    <span>Table of Contents</span>
+    <span>Table des matières</span>
     <Icon
       name="lucide:chevron-down"
       class="size-5 shrink-0 transition-transform group-open:rotate-180"
@@ -44,7 +44,7 @@ function getHeadingMargin(depth: number): string {
       class="flex list-none flex-col gap-y-2 px-4 xl:mr-8"
       id="table-of-contents"
     >
-      <li class="hidden text-lg font-medium xl:block">Table of Contents</li>
+      <li class="hidden text-lg font-medium xl:block">Table des matières</li>
       {
         headings.map((heading) => (
           <li
