--- a/src/pages/authors/[...id].astro
+++ b/src/pages/authors/[...id].astro
@@ -26,7 +26,7 @@ const authorPosts = await getPostsByAuthor(author.id)
   />
   <Breadcrumbs
     items={[
-      { href: '/authors', label: 'Authors', icon: 'lucide:users' },
+      { href: '/astro-blog/authors', label: 'auteurs', icon: 'lucide:users' },
       { label: author.data.name, icon: 'lucide:user' },
     ]}
   />
@@ -35,7 +35,7 @@ const authorPosts = await getPostsByAuthor(author.id)
     <AuthorCard author={author} />
   </section>
   <section class="flex flex-col gap-y-4">
-    <h2 class="text-2xl font-medium">Posts by {author.data.name}</h2>
+    <h2 class="text-2xl font-medium">les articles incroyables de {author.data.name}</h2>
     {
       authorPosts.length > 0 ? (
         <ul class="flex flex-col gap-4">
@@ -49,7 +49,7 @@ const authorPosts = await getPostsByAuthor(author.id)
         </ul>
       ) : (
         <p class="text-muted-foreground">
-          No posts available from this author.
+          Il n'a pas encore écrit d'articles (la honte).
         </p>
       )
     }
