--- a/src/pages/tags/[...id].astro
+++ b/src/pages/tags/[...id].astro
@@ -30,18 +30,18 @@ const { tag, posts } = Astro.props
 <Layout>
   <PageHead
     slot="head"
-    title={`Posts tagged with "${tag}"`}
-    description={`A collection of posts tagged with ${tag}.`}
+    title={`articles tagués "${tag}"`}
+    description={`tous les articles tagués avec ${tag}.`}
   />
   <Breadcrumbs
     items={[
-      { href: '/tags', label: 'Tags', icon: 'lucide:tags' },
+      { href: '/astro-blog/tags', label: 'Tags', icon: 'lucide:tags' },
       { label: tag, icon: 'lucide:tag' },
     ]}
   />
 
   <div class="flex flex-wrap items-center gap-2">
-    <h1 class="text-3xl font-medium">Posts tagged with</h1>
+    <h1 class="text-3xl font-medium">articles avec le tag</h1>
     <span
       class="bg-secondary flex items-center gap-x-1 rounded-full px-4 py-2 text-2xl font-medium"
     >
