add custom domain

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -34,8 +34,8 @@ import Favicons from './Favicons.astro'
     media="(prefers-color-scheme: light)"
   />
 
-  <link rel="sitemap" href="/astro-blog/sitemap-index.xml" />
-  <link rel="manifest" href="/astro-blog/site.webmanifest" />
+  <link rel="sitemap" href="/sitemap-index.xml" />
+  <link rel="manifest" href="/site.webmanifest" />
   <link
     rel="alternate"
     type="application/rss+xml"
