--- a/src/pages/authors/[...id].astro
+++ b/src/pages/authors/[...id].astro
@@ -26,7 +26,7 @@ const authorPosts = await getPostsByAuthor(author.id)
   />
   <Breadcrumbs
     items={[
-      { href: '/astro-blog/authors', label: 'auteurs', icon: 'lucide:users' },
+      { href: '/authors', label: 'auteurs', icon: 'lucide:users' },
       { label: author.data.name, icon: 'lucide:user' },
     ]}
   />
