--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
     </ul>
     <div class="flex justify-center">
       <Link
-        href="/astro-blog/blog"
+        href="/blog"
         class={buttonVariants({ variant: 'ghost' }) + ' group'}
       >
         tout le yap <span
