--- a/src/components/AuthorCard.astro
+++ b/src/components/AuthorCard.astro
@@ -29,7 +29,7 @@ const socialLinks: SocialLink[] = [
 >
   <div class="flex flex-wrap gap-4">
     <Link
-      href={`/astro-blog/authors/${author.id}`}
+      href={`/authors/${author.id}`}
       class={cn('block', isAuthorPage && 'pointer-events-none')}
     >
       <AvatarComponent
