--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import logo from '../../public/static/cheez-it.svg'
   <div
     class="mx-auto flex max-w-3xl flex-wrap items-center justify-between gap-4 p-4"
   >
-    <Link href="/astro-blog" class="flex shrink-0 items-center gap-2 text-xl font-medium">
+    <Link href="/" class="flex shrink-0 items-center gap-2 text-xl font-medium">
       <Image src={logo} alt="Logo" class="size-8" />
       {SITE.title}
     </Link>
